2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b10

 FIX: Some header things were called to early
      and broke integration in phpBB2

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b9

 Change: Code nicify layout/userData.inc

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b8

 * New: Added nice byte input widget.
        (Currently unused, but you never know ;) )

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b7

 * NEW: Added usage.php and support files for it.
        Main code and idea is from Dave Moore and Joan McGalliard.
        
        It shows the diskusage per Album or per user.

2007-01-16 Jens Tkotz <jens@peino.de> 1.6-RC1-b6

 * Fix: Images for shadow frame were broken.

   Thanks to Rasmus Lerdorf.

2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b5

 * Change: Show warning about generic Album also when embedded.

2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b4

 CHANGE: Enable Group Support for Joomla!
	     Joomla has no real groups, so put Joomla Users into Gallery groups.

 Thanks to Kai Tomalik for assistance.

2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b3

 * Fix: When an absolute url is given makeFormIntro, also use unhtmlentities

 * Fix: Remove whitespace in comment textarea.

 * Change: Nicer output of formatted_filesize()

 * Fix: Valid HTML in imagemap.php
 
2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b2

 * Change: Little installer enhancements.

   Thanks to Andy S.

2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b1

 * CHANGE: Remove <form> from adminbarcommands cell in layout/adminbox.inc
		   \- view_album.php
		   \- view_photo.php

2007-01-07 Chris Kelly <ckdake@ckdake.com> 1.6-alpha3

 * Release: 1.6-alpha3

2007-01-07 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b49

 * Fix: Edit Album Properties was broken.

   Thanks again to Kai.

2007-01-07 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b48

 * Change: Disable caching introduced by contribute patch in b46.
	       The idea is nice, but the code was halfbaken.
