@@ -1,3 +1,9 @@
+2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b11
+
+ * Fix: Warning in thumbnail view.
+
+ * Code cleanup in view_album.php
+
 2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b10
 
  FIX: Some header things were called to early
